feat(s3): query minio metrics for free space
