# backend/api/src/openapi_server/apis/s3upload_api_base.py
@@ -12,7 +12,9 @@ from openapi_server.models.http_validation_error import HTTPValidationError
 from openapi_server.models.internal_error import InternalError
 from openapi_server.models.presigned_url_body import PresignedUrlBody
 from openapi_server.models.presigned_url_resp import PresignedUrlResp
-from openapi_server.security_api import get_token_BearerAuth
+from openapi_server.models.upload_request_body import UploadRequestBody
+from openapi_server.models.upload_request_resp import UploadRequestResp
+
 
 class BaseS3uploadApi:
     subclasses: ClassVar[Tuple] = ()
@@ -20,10 +22,17 @@ class BaseS3uploadApi:
     def __init_subclass__(cls, **kwargs):
         super().__init_subclass__(**kwargs)
         BaseS3uploadApi.subclasses = BaseS3uploadApi.subclasses + (cls,)
-    async def abort_multipart_upload(
+    async def request_dataset_upload(
         self,
-        abort_upload_body: AbortUploadBody,
-    ) -> AbortUploadResp:
+        upload_request_body: UploadRequestBody,
+    ) -> UploadRequestResp:
+        ...
+
+
+    async def get_presigned_urls(
+        self,
+        presigned_url_body: PresignedUrlBody,
+    ) -> PresignedUrlResp:
         ...
 
 
@@ -34,15 +43,15 @@ class BaseS3uploadApi:
         ...
 
 
+    async def abort_multipart_upload(
+        self,
+        abort_upload_body: AbortUploadBody,
+    ) -> AbortUploadResp:
+        ...
+
+
     async def finalize_dataset_upload(
         self,
         finalize_dataset_upload_body: FinalizeDatasetUploadBody,
     ) -> FinalizeDatasetUploadResp:
-        ...
-
-
-    async def get_presigned_urls(
-        self,
-        presigned_url_body: PresignedUrlBody,
-    ) -> PresignedUrlResp:
         ...
