# backend/api/src/openapi_server/impl/s3upload_impl.py
@@ -11,6 +11,8 @@ from openapi_server.models.finalize_dataset_upload_body import FinalizeDatasetUp
 from openapi_server.models.finalize_dataset_upload_resp import FinalizeDatasetUploadResp
 from openapi_server.models.presigned_url_body import PresignedUrlBody
 from openapi_server.models.presigned_url_resp import PresignedUrlResp
+from openapi_server.models.upload_request_body import UploadRequestBody
+from openapi_server.models.upload_request_resp import UploadRequestResp
 
 from openapi_server.apis.s3upload_api_base import BaseS3uploadApi
 
@@ -19,17 +21,14 @@ from .s3 import (
     abort_multipart_upload,
     create_presigned_url,
     create_presigned_urls_multipart,
+    request_upload,
+    get_landingzone_bucket
 )
 
 from logging import getLogger
 
-from prefect.variables import Variable
 
 _LOGGER = getLogger("uvicorn.presignedurls")
-
-
-async def get_landingzone_bucket():
-    return await Variable.get("minio_landingzone_bucket")
 
 
 class BaseS3UploadApiImpl(BaseS3uploadApi):
@@ -39,7 +38,7 @@ class BaseS3UploadApiImpl(BaseS3uploadApi):
     ) -> CompleteUploadResp:
         try:
             bucket = await get_landingzone_bucket()
-            return complete_multipart_upload(bucket, complete_upload_body)
+            return await complete_multipart_upload(bucket, complete_upload_body)
         except Exception as e:
             _LOGGER.error(str(e))
             return JSONResponse(
@@ -52,7 +51,7 @@ class BaseS3UploadApiImpl(BaseS3uploadApi):
     ) -> AbortUploadResp:
         try:
             bucket = await get_landingzone_bucket()
-            abort_multipart_upload(
+            await abort_multipart_upload(
                 bucket_name=bucket,
                 object_name=abort_upload_body.object_name,
                 upload_id=abort_upload_body.upload_id,
@@ -75,7 +74,7 @@ class BaseS3UploadApiImpl(BaseS3uploadApi):
         try:
             bucket = await get_landingzone_bucket()
             if presigned_url_body.parts == 1:
-                url = create_presigned_url(
+                url = await create_presigned_url(
                     bucket_name=bucket,
                     object_name=presigned_url_body.object_name,
                 )
@@ -83,7 +82,7 @@ class BaseS3UploadApiImpl(BaseS3uploadApi):
                 _LOGGER.debug("Presigned Url created: %s", url)
                 return PresignedUrlResp(upload_id="", urls=[b64url])
             else:
-                uploadId, urls = create_presigned_urls_multipart(
+                uploadId, urls = await create_presigned_urls_multipart(
                     bucket_name=bucket,
                     object_name=presigned_url_body.object_name,
                     part_count=presigned_url_body.parts,
@@ -122,3 +121,7 @@ class BaseS3UploadApiImpl(BaseS3uploadApi):
                     "details": str(e),
                 },
             )
+
+    async def request_dataset_upload(self, upload_request_body: UploadRequestBody) -> UploadRequestResp:
+
+        return await request_upload(upload_request_body.dataset_pid, upload_request_body.total_gigabytes)
